fix secondary menu on mobile

--- a/component/header/css/header.css
+++ b/component/header/css/header.css
@@ -153,7 +153,7 @@ header .search-block-form {
     padding: .41rem 1.25rem;
 }
 
-.search-block-form .btn-primary:hover  {
+.search-block-form .btn-primary:hover {
     color: var(--cua-white);
     background: var(--cua-gold-hover);
     border: 1px solid var(--cua-gold-hover);
@@ -455,6 +455,7 @@ header .sticky .navbar-nav > .nav-item:first-child > .nav-link::before {
     background: var(--cua-white);
 }
 
+
 /* Responsive */
 @media only screen and (max-width: 991px) {
     #navbar-main {
@@ -466,8 +467,14 @@ header .sticky .navbar-nav > .nav-item:first-child > .nav-link::before {
         border-right-color: transparent;
     }
 
-    header ul.nav.navbar-nav li:last-child {
-        margin-bottom: 2rem;
+    nav#block-cua-theme-secondarymenu {
+        margin: 0 0 2rem 0;
+    }
+
+    nav#block-cua-theme-secondarymenu a.nav-link {
+        color: var(--cua-gray-700);
+        border-bottom: 1px solid var(--cua-gray-200);
+        padding: .5rem 0;
     }
 
     h1.site-slogan {
@@ -524,12 +531,6 @@ header .sticky .navbar-nav > .nav-item:first-child > .nav-link::before {
         --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='%23fff' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M3 3L27 27'/%3e%3cpath stroke='%23fff' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M3 27L27 3'/%3e%3c/svg%3e");
     }
 
-    .header .nav-link.nav-link-:last-child {
-        color: var(--bs-nav-link-color) !important;
-        font-size: .9rem;
-        padding: 0;
-    }
-
     .dropdown-menu.show {
         border-bottom: none;
         box-shadow: none !important;
@@ -541,23 +542,33 @@ header .sticky .navbar-nav > .nav-item:first-child > .nav-link::before {
         padding-left: 15px;
     }
 
-    .navbar-collapse .nav-link.nav-link-:last-child {
-        margin: 0.25rem 0;
-    }
-
     header #search-block-form {
         padding: 0;
     }
 
     .dropdown-toggle::after {
         position: absolute;
-        right:15px;
-        top:10px;
+        right: 15px;
+        top: 10px;
         border-top: 0.4em solid;
         border-right: 0.4em solid transparent;
         border-bottom: 0;
         border-left: 0.4em solid transparent;
     }
+
+    /* Secondary Mobile Menu */
+    .block-menu.menu--secondary-menu ul.nav {
+        flex-direction: column;
+    }
+
+    .block-menu.menu--secondary-menu ul.nav li.nav-item {
+        display: block;
+    }
+
+    .block-menu.menu--secondary-menu a.nav-link {
+        padding: 0;
+    }
+
 
 }
 
